2012-07-09  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSBundle.m: Fixes for bug #34815 ... map between old and
        new style language names and use the best language specific
        resource available.

2012-07-08  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/GNUstepBase/GSVersionMacros.h:
        fix for bug #36650
        * Source/NSFileManager.m: Apply rewritten patch by Sergey Golovin
        * Source/NSBundle.m: Fix for bug #34815 ... we shoudl now move to
        using ISO names.

2012-07-08  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSURL.m:
        * Source/NSURLHandle.m:
        Re-load a cached  handle if the content has been invalidated.
        Set the status of a file handle to not-loaded if the fiel is modified.
        Should fix bug #36726
        
2012-07-05  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSBundle.m: Don't assume that code loading won't be called
        re-entrantly.

2012-07-05  Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSPathUtilities.m: Fixed constant string comparison error 
	reported by Clang SVN trunk r158230 or more recent.
	See http://llvm.org/viewvc/llvm-project?view=rev&revision=158230
        This is a workaround for a Clang compiler bug ...

2012-07-02  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSBundle.m: Attempted fix for bug #34191 ... change framework
        class association to keep a map of loaded frameworks/bundles by class
        for quick lookup and alter code to check the runtime for new frameworks
        if we are asked for the bundle for a class and we can't find it.

2012-06-27  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSScanner.m: Fix missing 'else' which was causing a
        memory leak and minor performance degradation.

2012-06-12  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSPropertyList.m: Check for nil property list argument.

2012-06-07  Wolfgang Lux  <wolfgang.lux@gmail.com>
