@@ -388,4 +388,189 @@
   Zhuang = za;
   ZimbabweEnglish = en_ZW;
   Zulu = zu;
+  aar = aa;
+  abk = ab;
+  afr = af;
+  alb = sq;
+  amh = am;
+  ara = ar;
+  arm = hy;
+  asm = as;
+  ave = ae;
+  aym = ay;
+  aze = az;
+  bak = ba;
+  baq = eu;
+  bel = be;
+  ben = bn;
+  bih = bh;
+  bis = bi;
+  bod = bo;
+  bos = bs;
+  bre = br;
+  bul = bg;
+  bur = my;
+  cat = ca;
+  ces = cs;
+  cha = ch;
+  che = ce;
+  chi = zh;
+  chu = cu;
+  chv = cv;
+  cor = kw;
+  cos = co;
+  cym = cy;
+  cze = cs;
+  dan = da;
+  deu = de;
+  dut = nl;
+  dzo = dz;
+  ell = el;
+  eng = en;
+  epo = eo;
+  est = et;
+  eus = eu;
+  fao = fo;
+  fas = fa;
+  fij = fj;
+  fin = fi;
+  fra = fr;
+  fre = fr;
+  fry = fy;
+  geo = ka;
+  ger = de;
+  gla = gd;
+  gle = ga;
+  glg = gl;
+  glv = gv;
+  gre = el;
+  grn = gn;
+  guj = gu;
+  hau = ha;
+  heb = he;
+  her = hz;
+  hin = hi;
+  hmo = ho;
+  hrv = hr;
+  hun = hu;
+  hye = hy;
+  ice = is;
+  iku = iu;
+  ile = ie;
+  ina = ia;
+  ind = id;
+  ipk = ik;
+  isl = is;
+  ita = it;
+  jav = jw;
+  jaw = jw;
+  jpn = ja;
+  kal = kl;
+  kan = kn;
+  kas = ks;
+  kat = ka;
+  kaz = kk;
+  khm = km;
+  kik = ki;
+  kin = rw;
+  kir = ky;
+  kom = kv;
+  kor = ko;
+  kua = kj;
+  kur = ku;
+  lao = lo;
+  lat = la;
+  lav = lv;
+  lin = ln;
+  lit = lt;
+  ltz = lb;
+  mac = mk;
+  mah = mh;
+  mal = ml;
+  mao = mi;
+  mar = mr;
+  may = ms;
+  mkd = mk;
+  mlg = mg;
+  mlt = mt;
+  mol = mo;
+  mon = mn;
+  mri = mi;
+  msa = ms;
+  mya = my;
+  nau = na;
+  nav = nv;
+  nbl = nr;
+  nde = nd;
+  ndo = ng;
+  nep = ne;
+  nld = nl;
+  nno = nn;
+  nob = nb;
+  nor = no;
+  nya = ny;
+  oci = oc;
+  ori = or;
+  orm = om;
+  oss = os;
+  pan = pa;
+  per = fa;
+  pli = pi;
+  pol = pl;
+  por = pt;
+  pus = ps;
+  que = qu;
+  roh = rm;
+  ron = ro;
+  rum = ro;
+  run = rn;
+  rus = ru;
+  sag = sg;
+  san = sa;
+  scc = sr;
+  scr = hr;
+  sin = si;
+  slk = sk;
+  slo = sk;
+  slv = sl;
+  sme = se;
+  smo = sm;
+  sna = sn;
+  snd = sd;
+  som = so;
+  sot = st;
+  spa = es;
+  sqi = sq;
+  srd = sc;
+  srp = sr;
+  ssw = ss;
+  sun = su;
+  swa = sw;
+  swe = sv;
+  tah = ty;
+  tam = ta;
+  tat = tt;
+  tel = te;
+  tgk = tg;
+  tgl = tl;
+  tha = th;
+  tib = bo;
+  tsn = tn;
+  tso = ts;
+  tuk = tk;
+  tur = tr;
+  twi = tw;
+  uig = ug;
+  ukr = uk;
+  urd = ur;
+  uzb = uz;
+  vie = vi;
+  vol = vo;
+  wel = cy;
+  wol = wo;
+  xho = xh;
+  yid = yi;
+  zha = za;
+  zho = zh;
+  zul = zu;
 }
